2.29.1 (2025-05-25) hot fix
-----------------------------
* RestAPI Module
  - Fixed a game-crash issue that related to some bugged "Rest API" URI resource addresses. Thanks to user "npastore28" for reporting the issue.
    Note, this game-crash issue is due to a known issue in LMU's "Rest API", where some of the URI resource addresses (such as "garage/Pitstop/getPitstopTimes") are buggy and can crash game if accessed them under certain conditions.
    This hot fix removed access to those bugged URI resource addresses.

2.29.0 (2025-05-24)
-----------------------------
* Major change
  - Optimized "Rest API" accessing methods, which adds additional update time delay that reduces unnecessary data accessing if API data has not changed recently.
    For example, data from Rest API is accessed every 0.1 seconds on default setting, but if API data has not changed recently, the update interval will be increased up to every 2 seconds instead (for example, "pit strategy" data is only changed when user changes it in MFD menu).
  - Separated "pit strategy" data accessing from other none-pit data (fuel, energy, damage, etc), and can be turned off completely via the new "enable_pit_strategy_access" option in RestAPI Module.
    Note, recently there has been reports regarding an issue related to MFD "Pitstop" menu flickering in "LMU", which can be caused by accessing "pit strategy" data frequently. This flickering issue should not be a concern now for TinyPedal with the new accessing methods mentioned above.
    Additionally, a new "enable_pit_strategy_access" option is provided in RestAPI Module, which allows disabling "pit strategy" data accessing completely and avoids the flickering issue.
    However note, flickering issue can still be triggered by other programs or plugins that have frequently accessed to those "pit strategy" data.

* RestAPI Module