@@ -1,3 +1,8 @@
+WIP
+-----------------------------
+* RestAPI Module
+  - Fixed an issue where some data would stop updating if recently paused and resumed game.
+
 2.29.1 (2025-05-25) hot fix
 -----------------------------
 * RestAPI Module
